Bump Cleanroom to 0.3.0, add Java 24 section